--- a/index.html
+++ b/index.html
@@ -133,8 +133,14 @@
 
 					<!-- tab video list - BEGIN -->
 					<div role="tabpanel" class="tab-pane active" id="tab-video-list">
-
 						<div id="video-list" class="video-list carousel slide" data-ride="carousel">
+							<!-- Controls -->
+							<nav>
+								<ul class="pager">
+									<li><a class="" href="#video-list" role="button" data-slide="prev"><span class=" glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a></li>
+									<li><a class="" href="#video-list" role="button" data-slide="next"><span class=" glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a></li>
+								</ul>
+							</nav>
 							<div class="carousel-inner" role="listbox">
 								<div class="item active">
 									<div class="video col-md-4 col-sm-6 col-xs-12">
@@ -375,15 +381,6 @@
 									</div>
 								</div>
 							</div>
-							<!-- Controls -->
-							<a class="left carousel-control" href="#video-list" role="button" data-slide="prev">
-								<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-								<span class="sr-only">Trước</span>
-							</a>
-							<a class="right carousel-control" href="#video-list" role="button" data-slide="next">
-								<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-								<span class="sr-only">Sau</span>
-							</a>
 						</div>
 					</div>
 					<!-- tab video list - END -->
