--- a/muagoicuoc-1.html
+++ b/muagoicuoc-1.html
@@ -16,45 +16,54 @@
 <body>
 	<header>
 		<nav class="navbar navbar-default">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#user-nav" aria-expanded="false">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-logo" href="/"><img src="common/v1/img/me_icon.png"></a>
-			</div>
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#user-nav" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-logo" href="/"><img src="common/v1/img/me_icon.png"></a>
+				</div>
 
-			<div class="collapse navbar-collapse" id="user-nav">
-				<ul class="nav navbar-nav navbar-right">
-				<!-- Đã đăng nhập - BEGIN -->
-				<li class="dropdown">
-					<a id="btn-account" href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tài khoản <span class="caret"></span></a>
-					<ul class="dropdown-menu">
-						<li><a><strong>Phạm Hải Thanh</strong></a></li>
-						<li><a href="#">Thông tin tài khoản</a></li>
-						<li><a href="#">Đổi mật khẩu</a></li>
-						<li role="separator" class="divider"></li>
-						<li><a href="muagoicuoc-1.html">Mua gói cước</a></li>
-						<li role="separator" class="divider"></li>
-						<li><a href="#">Thoát</a></li>
-					  </ul>
-				</li>
-				<!-- Đã đăng nhập - END -->
-				<!-- Chưa đăng nhập - BEGIN -->
-				<li>
-					<a id="btn-register" class="btn btn-default" href="dangky-1.html" target="_blank">Đăng ký</a>
-				</li>
-				<li>
-					<a id="btn-signin" class="btn btn-primary" href="dangnhap-1.html" target="_blank">Đăng nhập</a>
-				</li>
-				<!-- Chưa đăng nhập - END -->
-				</ul>
+				<div class="collapse navbar-collapse" id="user-nav">
+					<ul class="nav navbar-nav navbar-right">
+					<!-- Đã đăng nhập - BEGIN -->
+					<li class="dropdown">
+						<a id="btn-account" href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tài khoản <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a><strong>Phạm Hải Thanh</strong></a></li>
+							<li><a href="#">Thông tin tài khoản</a></li>
+							<li><a href="#">Đổi mật khẩu</a></li>
+							<li role="separator" class="divider"></li>
+							<li><a href="muagoicuoc-1.html">Mua gói cước</a></li>
+							<li role="separator" class="divider"></li>
+							<li><a href="#">Thoát</a></li>
+						  </ul>
+					</li>
+					<!-- Đã đăng nhập - END -->
+					<!-- Chưa đăng nhập - BEGIN -->
+					<li>
+						<a id="btn-register" class="btn btn-default" href="dangky-1.html" target="_blank">Đăng ký</a>
+					</li>
+					<li>
+						<a id="btn-signin" class="btn btn-primary" href="dangnhap-1.html" target="_blank">Đăng nhập</a>
+					</li>
+					<!-- Chưa đăng nhập - END -->
+					</ul>
+				</div>
+			</div>
+		</nav>
+
+		<div id="landing-cover" class="row-fluid landing-container">
+			<div class="container">
+				<div class="row text-center">
+					<h1 class="heading">Học tiếng Anh qua video</h1>
+					<h2><small class="sub-heading">Hàng ngàn video với hàng trăm chủ đề, thoả mãn mọi trình độ của bạn.</small></h2>
+				</div>
 			</div>
 		</div>
-		</nav>
 	</header>
 
 	<div class="container">
@@ -84,9 +93,9 @@
 								<small class="product-helper">over 10,000 videos with subtitles</small>
 							</p>
 						</td>
-						<td><strong>Không giới hạn</strong></td>
-						<td><strong>Không giới hạn</strong></td>
-						<td><strong>Không giới hạn</strong></td>
+						<td>Không giới hạn</td>
+						<td>Không giới hạn</td>
+						<td>Không giới hạn</td>
 					</tr>
 					<tr>
 						<th>
@@ -98,9 +107,9 @@
 							<small class="product-helper">words by listening and typing</small>
 							</p>
 						</td>
-						<td><strong>Chỉ 2 video</strong></td>
-						<td><strong>Không giới hạn</strong></td>
-						<td><strong>Không giới hạn</strong></td>
+						<td>Chỉ 2 video</td>
+						<td>Không giới hạn</td>
+						<td>Không giới hạn</td>
 					</tr>
 					<tr>
 						<th>
@@ -112,9 +121,9 @@
 							<small class="product-helper">and get real-time pronunciation feedback</small>
 							</p>
 						</td>
-						<td><strong>Chỉ 2 video</strong></td>
-						<td><strong>Không giới hạn</strong></td>
-						<td><strong>Không giới hạn</strong></td>
+						<td>Chỉ 2 video</td>
+						<td>Không giới hạn</td>
+						<td>Không giới hạn</td>
 					</tr>
 					<tr>
 						<th>
@@ -127,9 +136,9 @@
 							<small class="product-helper">with a teacher on your video lesson</small>
 							</p>
 						</td>
-						<td><strong></strong></td>
-						<td><strong>1 buổi sau mỗi 10 video</strong></td>
-						<td><strong>Không giới hạn</strong></td>
+						<td>-</td>
+						<td>1 buổi sau mỗi 10 video</td>
+						<td>Không giới hạn</td>
 					</tr>
 				</tbody>
 				<tfoot>
@@ -171,7 +180,7 @@
 	</div>
 
 	<!-- Modal -BEGIN -->
-	<div class="modal fade" id="modal-golive" tabindex="-1" role="dialog" width="300">
+	<div class="modal fade" id="modal-golive" tabindex="-1" role="dialog">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -185,7 +194,7 @@
 		</div>
 	</div>
 
-	<div class="modal fade" id="modal-guarantee" tabindex="-1" role="dialog" width="300">
+	<div class="modal fade" id="modal-guarantee" tabindex="-1" role="dialog">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -207,7 +216,7 @@
 		</div>
 	</div>
 
-	<div class="modal fade" id="modal-cancel" tabindex="-1" role="dialog" width="300">
+	<div class="modal fade" id="modal-cancel" tabindex="-1" role="dialog">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -239,9 +248,41 @@
 	</div>
 	<!-- Modal END -->
 
-	<footer>
+	<footer class="row-fluid">
 		<div class="container">
-			FOOTER
+		<div class="clearfix">
+			<ul class="nav navbar-nav navbar-left">
+				<li><a href="index.html">Trang chủ</a></li>
+				<li><a href="news.html">Tin tức</a></li>
+				<li><a href="muagoicuoc-1.html">Gói cước</a></li>
+				<li><a href="faq.html">FAQ</a></li>
+				<li><a href="contact.html">Liên hệ</a></li>
+			</ul>
+			<ul class="nav navbar-nav navbar-right">
+				<li><p class="navbar-text">Bản quyền thuộc về Tổng công ty Truyền thông (VNPT-Media)</p></li>
+			</ul>
+		</div>
+		<div class="clearfix">
+			<div class="pull-left">
+					<div class="copyright-content">
+					<p><strong>Dịch vụ học tiếng Anh trực tuyến MyEnglish</strong></p>
+					<p>Địa chỉ: 57A Huỳnh Thúc Kháng, Láng Hạ, Đống Đa, Hà Nội.</p>
+					<p>Hotline: 0888.91.56.96. Email: <a href="mailto:myenglish@vnpt.vn">myenglish@vnpt.vn</a></p>
+					<p>Dịch vụ cung cấp thử nghiệm</p>
+				</div>
+			</div>
+
+			<div class="copyright pull-right">
+				<p>
+					<a href="http://vnptmedia.vn" target="_blank" title="Dịch vụ MyEnglish"><span class="logo logo-me"></span></a>
+					<a href="http://vnptmedia.vn" target="_blank" title="Dịch vụ MyHomework"><span class="logo logo-mh"></span></a>
+				</p>
+				<p>
+					<a href="http://vnptmedia.vn" target="_blank" title="Tập đoàn VNPT"><span class="logo logo-vnptmedia"></span></a>
+					<a href="http://vnptmedia.vn" target="_blank" title="Tổng công ty Truyền thông"><span class="logo logo-vnpt"></span></a>
+				</p>
+			</div>
+		</div>
 		</div>
 	</footer>
 
