--- a/quenmk-1.html
+++ b/quenmk-1.html
@@ -8,13 +8,9 @@
 
 	<title>Quên mật khẩu - MyEnglish</title>
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="common/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" media="screen" href="common/v1/css/main.css">
-	<link rel="icon" href="images/favicon.png">
-
-	<!--[if IE]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
+	<link rel="icon" href="common/v1/img/favicon.png">
 </head>
 
 <body>
@@ -45,8 +41,8 @@
 </div>
 </div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="common/jquery/jquery.min.js"></script>
+	<script src="common/bootstrap/bootstrap.min.js"></script>
 	<script src="common/v1/js/main.js"></script>
 </body>
 
