--- a/quenmk-4.html
+++ b/quenmk-4.html
@@ -54,8 +54,8 @@
 </div>
 </div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="common/jquery/jquery.min.js"></script>
+	<script src="common/bootstrap/bootstrap.min.js"></script>
 	<script src="common/v1/js/main.js"></script>
 </body>
 
