Sửa link trang chủ

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 						<a id="btn-account" href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tài khoản <span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a><strong>Phạm Hải Thanh</strong></a></li>
-							<li><a href="#">Thông tin tài khoản</a></li>
-							<li><a href="#">Đổi mật khẩu</a></li>
+							<li><a href="taikhoan-1.html">Thông tin tài khoản</a></li>
+							<li><a href="taikhoan-2.html">Đổi mật khẩu</a></li>
 							<li role="separator" class="divider"></li>
 							<li><a href="muagoicuoc-1.html">Mua gói cước</a></li>
 							<li role="separator" class="divider"></li>
