--- a/dangky-1.html
+++ b/dangky-1.html
@@ -41,6 +41,22 @@
 		<div role="tabpanel" class="tab-pane active" id="tab-email">
 			<form id="form-register-email" class="form-horizontal">
 				<div class="form-group">
+					<label for="lastname" class="col-sm-3 control-label">Tên đầy đủ</label>
+					<div class="col-sm-9">
+						<div class="name clearfix">
+							<div class="col-sm-6">
+								<input type="text" class="form-control" id="lastname" placeholder="Họ, đệm" maxlength="255">
+								<span class="help-block"></span>
+							</div>
+							<div class="col-sm-6">
+								<input type="text" class="form-control" id="firstname" placeholder="Tên" 
+								maxlength="255">
+								<span class="help-block"></span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="form-group">
 					<label for="email" class="col-sm-3 control-label">Email</label>
 					<div class="col-sm-9">
 						<input type="text" class="form-control" id="email" placeholder="" maxlength="255">
