bổ sung news detail, thay đổi menu khoá học

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div id="landing-cover" class="row-fluid landing-container">
 			<div class="container">
 				<div class="row text-center">
-					<h1 class="heading">Học tiếng Anh qua video</h1>
+					<h1 class="heading">Học Tiếng Anh qua video</h1>
 					<h2><small class="sub-heading">Hàng ngàn video với hàng trăm chủ đề, thoả mãn mọi trình độ của bạn.</small></h2>
 				</div>
 			</div>
@@ -81,23 +81,47 @@
 				</div>
 
 				<h3 class="heading">Chủ đề</h3>
-				<div id="lst-group-topic" class="list-group">
-					<a href="#" class="list-group-item active">Tất cả</a>
-					<a href="#" class="list-group-item">Kinh doanh</a>
-					<a href="#" class="list-group-item">Truyền thông</a>
-					<a href="#" class="list-group-item">Giao tiếp xã hội</a>
-					<a href="#" class="list-group-item">Du lịch</a>
-				</div>
+				<ul id="lst-group-topic" class="list-group">
+					<li class="list-group-item dropdown"><span class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tiếng Anh trẻ em<span class="caret"></span></span>
+						<ul class="dropdown-menu">
+							<li><a href="#">Tiếng Anh mẫu giáo</a></li>
+							<li><a href="#">Tiếng Anh lớp 1</a></li>
+							<li><a href="#">Tiếng Anh lớp 2</a></li>
+							<li><a href="#">Tiếng Anh lớp 3</a></li>
+							<li><a href="#">Tiếng Anh lớp 4</a></li>
+							<li><a href="#">Tiếng Anh lớp 5</a></li>
+						</ul>
+					</li>
+					<li class="list-group-item dropdown"><span class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tiếng Anh phổ thông<span class="caret"></span></span>
+						<ul class="dropdown-menu">
+							<li><a href="#">Tiếng Anh lớp 6</a></li>
+							<li><a href="#">Tiếng Anh lớp 7</a></li>
+							<li><a href="#">Tiếng Anh lớp 8</a></li>
+							<li><a href="#">Tiếng Anh lớp 9</a></li>
+							<li><a href="#">Tiếng Anh lớp 10</a></li>
+							<li><a href="#">Tiếng Anh lớp 11</a></li>
+							<li><a href="#">Tiếng Anh lớp 12</a></li>
+						</ul>
+					</li>
+					<li class="list-group-item dropdown"><span class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tiếng Anh dành cho sinh viên và người đi làm<span class="caret"></span></span>
+						<ul class="dropdown-menu">
+							<li><a href="#">Tiếng Anh đại học, cao đẳng</a></li>
+							<li><a href="#">Tiếng Anh cho người đi làm</a></li>
+						</ul>
+					</li>
+					<li class="list-group-item">Luyện thi TOEIC, TOEFL, IELTS</li>
+					<li class="list-group-item">Tiếng Anh dành cho các doanh nghiệp và tổ chức</li>
+					<li class="list-group-item">Tiếng Anh chuyên sâu cho các ngành </li>
+					<li class="list-group-item">Tiếng Anh theo trình độ người học </li>
+				</ul>
 
 				<h3 class="heading">Kỹ năng</h3>
-				<div id="lst-group-skill" class="list-group">
-					<a href="#" class="list-group-item active">Tất cả</a>
-					<a href="#" class="list-group-item">Ngữ pháp</a>
-					<a href="#" class="list-group-item">Phát âm</a>
-					<a href="#" class="list-group-item">Các kỳ thi</a>
-					<a href="#" class="list-group-item">Giao tiếp</a>
-					<a href="#" class="list-group-item">Từ vựng</a>
-				</div>
+				<ul id="lst-group-skill" class="list-group">
+					<li class="list-group-item">Ngữ pháp</li>
+					<li class="list-group-item">Phát âm</li>
+					<li class="list-group-item">Giao tiếp</li>
+					<li class="list-group-item">Từ vựng</li>
+				</ul>
 			</div>
 
 			<div class="col-sm-9">
@@ -790,7 +814,7 @@
 		<div class="clearfix">
 			<div class="pull-left">
 					<div class="copyright-content">
-					<p><strong>Dịch vụ học tiếng Anh trực tuyến MyEnglish</strong></p>
+					<p><strong>Dịch vụ học Tiếng Anh trực tuyến MyEnglish</strong></p>
 					<p>Địa chỉ: 57A Huỳnh Thúc Kháng, Láng Hạ, Đống Đa, Hà Nội.</p>
 					<p>Hotline: 0888.91.56.96. Email: <a href="mailto:myenglish@vnpt.vn">myenglish@vnpt.vn</a></p>
 					<p>Dịch vụ cung cấp thử nghiệm.</p>
