--- a/news.html
+++ b/news.html
@@ -73,10 +73,10 @@
 
 			<div class="media">
 				<div class="media-left">
-					<a href="" class="thumbnail"><img class="media-object" src="data\1.jpg" alt="Chính sách đơn hàng chuyển thẳng"></a>
+					<a href="news-1.html" class="thumbnail"><img class="media-object" src="data\1.jpg" alt="Chính sách đơn hàng chuyển thẳng"></a>
 				</div>
 				<div class="media-body">
-					<h4 class="media-heading heading"><a href="">Chính sách đơn hàng chuyển thẳng</a></h4>
+					<h4 class="media-heading heading"><a href="news-1.html">Chính sách đơn hàng chuyển thẳng</a></h4>
 					<small><em>13/04/17</em></small>
 					<p>SeuDo thông báo tới Quý khách hàng chính sách đơn hàng chuyển thẳng hàng hóa trực tiếp từ Trung Quốc (TQ) về thẳng nhà khách hàng, Quý khách vui lòng đọc kỹ thông tin để đảm bảo quyền lợi của mình một cách đầy đủ nhất.</p>
 				</div>
@@ -84,10 +84,10 @@
 
 			<div class="media">
 				<div class="media-left">
-					<a href="" class="thumbnail"><img class="media-object" src="data\2.jpg" alt="Chính sách đơn hàng chuyển thẳng"></a>
+					<a href="news-1.html" class="thumbnail"><img class="media-object" src="data\2.jpg" alt="Chính sách đơn hàng chuyển thẳng"></a>
 				</div>
 				<div class="media-body">
-					<h4 class="media-heading heading"><a href="">Chính sách đơn hàng chuyển thẳng</a></h4>
+					<h4 class="media-heading heading"><a href="news-1.html">Chính sách đơn hàng chuyển thẳng</a></h4>
 					<small><em>13/04/17</em></small>
 					<p>SeuDo thông báo tới Quý khách hàng chính sách đơn hàng chuyển thẳng hàng hóa trực tiếp từ Trung Quốc (TQ) về thẳng nhà khách hàng, Quý khách vui lòng đọc kỹ thông tin để đảm bảo quyền lợi của mình một cách đầy đủ nhất.</p>
 				</div>
@@ -95,10 +95,10 @@
 
 			<div class="media">
 				<div class="media-left">
-					<a href="" class="thumbnail"><img class="media-object" src="data\3.jpg" alt="Chính sách đơn hàng chuyển thẳng"></a>
+					<a href="news-1.html" class="thumbnail"><img class="media-object" src="data\3.jpg" alt="Chính sách đơn hàng chuyển thẳng"></a>
 				</div>
 				<div class="media-body">
-					<h4 class="media-heading heading"><a href="">Chính sách đơn hàng chuyển thẳng</a></h4>
+					<h4 class="media-heading heading"><a href="news-1.html">Chính sách đơn hàng chuyển thẳng</a></h4>
 					<small><em>13/04/17</em></small>
 					<p>SeuDo thông báo tới Quý khách hàng chính sách đơn hàng chuyển thẳng hàng hóa trực tiếp từ Trung Quốc (TQ) về thẳng nhà khách hàng, Quý khách vui lòng đọc kỹ thông tin để đảm bảo quyền lợi của mình một cách đầy đủ nhất.</p>
 				</div>
@@ -106,10 +106,10 @@
 
 			<div class="media">
 				<div class="media-left">
-					<a href="" class="thumbnail"><img class="media-object" src="data\4.jpg" alt="Chính sách đơn hàng chuyển thẳng"></a>
+					<a href="news-1.html" class="thumbnail"><img class="media-object" src="data\4.jpg" alt="Chính sách đơn hàng chuyển thẳng"></a>
 				</div>
 				<div class="media-body">
-					<h4 class="media-heading heading"><a href="">Chính sách đơn hàng chuyển thẳng</a></h4>
+					<h4 class="media-heading heading"><a href="news-1.html">Chính sách đơn hàng chuyển thẳng</a></h4>
 					<small><em>13/04/17</em></small>
 					<p>SeuDo thông báo tới Quý khách hàng chính sách đơn hàng chuyển thẳng hàng hóa trực tiếp từ Trung Quốc (TQ) về thẳng nhà khách hàng, Quý khách vui lòng đọc kỹ thông tin để đảm bảo quyền lợi của mình một cách đầy đủ nhất.</p>
 				</div>
@@ -117,10 +117,10 @@
 
 			<div class="media">
 				<div class="media-left">
-					<a href="" class="thumbnail"><img class="media-object" src="data\5.jpg" alt="Chính sách đơn hàng chuyển thẳng"></a>
+					<a href="news-1.html" class="thumbnail"><img class="media-object" src="data\5.jpg" alt="Chính sách đơn hàng chuyển thẳng"></a>
 				</div>
 				<div class="media-body">
-					<h4 class="media-heading heading"><a href="">Chính sách đơn hàng chuyển thẳng</a></h4>
+					<h4 class="media-heading heading"><a href="news-1.html">Chính sách đơn hàng chuyển thẳng</a></h4>
 					<small><em>13/04/17</em></small>
 					<p>SeuDo thông báo tới Quý khách hàng chính sách đơn hàng chuyển thẳng hàng hóa trực tiếp từ Trung Quốc (TQ) về thẳng nhà khách hàng, Quý khách vui lòng đọc kỹ thông tin để đảm bảo quyền lợi của mình một cách đầy đủ nhất.</p>
 				</div>
