bổ sung form tư vấn và thay logo

--- a/index.html
+++ b/index.html
@@ -58,9 +58,46 @@
 
 		<div id="landing-cover" class="row-fluid landing-container">
 			<div class="container">
-				<div class="row text-center">
+				<div class="row col-md-6 col-sm-12 text-center">
 					<h1 class="heading">Học Tiếng Anh qua video</h1>
-					<h2><small class="sub-heading">Hàng ngàn video với hàng trăm chủ đề, thoả mãn mọi trình độ của bạn.</small></h2>
+
+					<h2><small class="sub-heading">Tham gia cộng đồng MyEnglish với hơn 2 triệu người dùng trong hơn 120 quốc gia trên toàn thế giới.<br>Hàng ngàn video với hàng trăm chủ đề, thoả mãn mọi trình độ của bạn.<br><br></small></h2>
+
+					<a class="btn btn-primary" role="button" href="dangky-1.html">Đăng ký tài khoản miễn phí</a>
+				</div>
+				<div class="row col-md-6 col-sm-12 text-center pull-right">
+					<h1 class="heading">Đăng ký tư vấn miễn phí</h1>
+					<div class="col-sm-offset-2 col-sm-8">
+						<form id="form-consult" class="form-horizontal">
+							<div class="form-group">
+								<div class="">
+									<input type="text" class="form-control" id="name" placeholder="Họ tên" maxlength="255">
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="">
+									<input type="text" class="form-control" id="email" placeholder="Email" maxlength="255">
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="">
+									<input type="text" class="form-control" id="mobile" placeholder="Số điện thoại di động" maxlength="255">
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="checkbox">
+									<label>
+										<input type="checkbox" id="term"> Tôi đồng ý với <a href="term.html">Thoả thuận sử dụng</a>
+									</label>
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="">
+									<button type="submit" class="btn btn-success">Đăng ký tư vấn miễn phí</button>
+								</div>
+							</div>
+						</form>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -103,18 +140,49 @@
 							<li><a href="#">Tiếng Anh lớp 12</a></li>
 						</ul>
 					</li>
-					<li class="list-group-item dropdown"><span class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tiếng Anh dành cho sinh viên và người đi làm<span class="caret"></span></span>
+					<li class="list-group-item dropdown"><span class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tiếng Anh chuyên ngành<span class="caret"></span></span>
 						<ul class="dropdown-menu">
-							<li><a href="#">Tiếng Anh đại học, cao đẳng</a></li>
-							<li><a href="#">Tiếng Anh cho người đi làm</a></li>
+							<li><a href="#">Nông nghiệp</a></li>
+							<li><a href="#">Nghệ thuật và thiết kế</a></li>
+							<li><a href="#">Giáo dục</a></li>
+							<li><a href="#">Năng lượng (Dầu khí & ga)</a></li>
+							<li><a href="#">Kĩ thuật</a></li>
+							<li><a href="#">Môi trường</a></li>
+							<li><a href="#">Tài chính</a></li>
+							<li><a href="#">Chăm sóc sức khoẻ</a></li>
+							<li><a href="#">Nhà hàng khách sạn</a></li>
+							<li><a href="#">Luật</a></li>
+							<li><a href="#">Logistics</a></li>
+							<li><a href="#">Sản xuất</a></li>
+							<li><a href="#">Y khoa</a></li>
+							<li><a href="#">Thư ký</a></li>
+							<li><a href="#">Dịch vụ</a></li>
+							<li><a href="#">Công nghệ</a></li>
+							<li><a href="#">Vận tải</a></li>
 						</ul>
 					</li>
-					<li class="list-group-item">Luyện thi TOEIC, TOEFL, IELTS</li>
-					<li class="list-group-item">Tiếng Anh dành cho các doanh nghiệp và tổ chức</li>
-					<li class="list-group-item">Tiếng Anh chuyên sâu cho các ngành </li>
-					<li class="list-group-item">Tiếng Anh theo trình độ người học </li>
+					<li class="list-group-item">Tiếng Anh doanh nghiệp</li>
+					<li class="list-group-item">Tiếng anh học thuật</li>
+					<li class="list-group-item dropdown"><span class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Luyện thi TOEIC, TOEFL, IELTS<span class="caret"></span></span>
+						<ul class="dropdown-menu">
+							<li><a href="#">TOEIC</a></li>
+							<li><a href="#">TOEFL</a></li>
+							<li><a href="#">IELTS</a></li>
+						</ul>
+					</li>
+					<li class="list-group-item dropdown"><span class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tiếng Anh tổng quát<span class="caret"></span></span>
+						<ul class="dropdown-menu">
+							<li><a href="#">Cuộc sống thường ngày</a></li>
+							<li><a href="#">Các bài phát biểu nổi tiếng</a></li>
+							<li><a href="#">Các chủ đề toàn cầu</a></li>
+							<li><a href="#">Ngôn ngữ học</a></li>
+							<li><a href="#">Truyền thông</a></li>
+							<li><a href="#">Điện ảnh</a></li>
+							<li><a href="#">Tin tức</a></li>
+							<li><a href="#">Du lịch</a></li>
+						</ul>
+					</li>
 				</ul>
-
 				<h3 class="heading">Kỹ năng</h3>
 				<ul id="lst-group-skill" class="list-group">
 					<li class="list-group-item">Ngữ pháp</li>
@@ -827,7 +895,7 @@
 					<a href="http://vnptmedia.vn" target="_blank" title="Dịch vụ MyHomework"><span class="logo logo-mh"></span></a>
 				</p>
 				<p>
-					<a href="http://vnptmedia.vn" target="_blank" title="Tập đoàn VNPT"><span class="logo logo-vnptmedia"></span></a>
+					<a href="http://vnedu.vn" target="_blank" title="Mạng giáo dục Việt Nam"><span class="logo logo-vnedu"></span></a>
 					<a href="http://vnptmedia.vn" target="_blank" title="Tổng công ty Truyền thông"><span class="logo logo-vnpt"></span></a>
 				</p>
 			</div>
