sửa lỗi: thừa pull-right

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 					<a class="btn btn-primary" role="button" href="dangky-1.html">Đăng ký tài khoản miễn phí</a>
 				</div>
-				<div class="row col-md-6 col-sm-12 text-center pull-right">
+				<div class="row col-md-6 col-sm-12 text-center">
 					<h1 class="heading">Đăng ký tư vấn miễn phí</h1>
 					<div class="col-sm-offset-2 col-sm-8">
 						<form id="form-consult" class="form-horizontal">
