--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
 
 				<h3 class="heading">Chủ đề</h3>
 				<ul id="lst-group-topic" class="list-group">
-					<li class="list-group-item dropdown"><span class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tiếng Anh trẻ em<span class="caret"></span></span>
+					<li class="list-group-item">Tiếng Anh trẻ em</li>
+					<li class="list-group-item dropdown"><span class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tiếng Anh tiểu học<span class="caret"></span></span>
 						<ul class="dropdown-menu">
-							<li><a href="#">Tiếng Anh mẫu giáo</a></li>
 							<li><a href="#">Tiếng Anh lớp 1</a></li>
 							<li><a href="#">Tiếng Anh lớp 2</a></li>
 							<li><a href="#">Tiếng Anh lớp 3</a></li>
