bổ sung thêm gói cước BASIC

--- a/muagoicuoc-1.html
+++ b/muagoicuoc-1.html
@@ -78,6 +78,7 @@
 						<th></th>
 						<th></th>
 						<th class="text-primary">Miễn phí</th>
+						<th class="text-primary">Basic</th>
 						<th class="text-primary">Premium</th>
 						<th class="text-primary">Platinum</th>
 					</tr>
@@ -96,6 +97,7 @@
 						<td>Không giới hạn</td>
 						<td>Không giới hạn</td>
 						<td>Không giới hạn</td>
+						<td>Không giới hạn</td>
 					</tr>
 					<tr>
 						<th>
@@ -108,6 +110,7 @@
 							</p>
 						</td>
 						<td>Chỉ 2 video</td>
+						<td>Không giới hạn</td>
 						<td>Không giới hạn</td>
 						<td>Không giới hạn</td>
 					</tr>
@@ -124,6 +127,7 @@
 						<td>Chỉ 2 video</td>
 						<td>Không giới hạn</td>
 						<td>Không giới hạn</td>
+						<td>Không giới hạn</td>
 					</tr>
 					<tr>
 						<th>
@@ -137,6 +141,7 @@
 							</p>
 						</td>
 						<td>-</td>
+						<td>-</td>
 						<td>1 buổi sau mỗi 10 video</td>
 						<td>Không giới hạn</td>
 					</tr>
@@ -149,6 +154,9 @@
 							<!-- User chưa đăng ký - BEGIN -->
 							<a href="dangky-1.html" class="btn btn-default">Đăng ký »</a>
 							<!-- User chưa đăng ký - END -->
+						</td>
+						<td>
+							<a href="muagoicuoc-2.html" class="btn btn-success">Chọn »</a>
 						</td>
 						<td>
 							<a href="muagoicuoc-2.html" class="btn btn-success">Chọn »</a>
