bổ sung email: nâng hạng tài khoản

--- a/email.html
+++ b/email.html
@@ -70,6 +70,34 @@
 				<p><strong>MyEnglish</trong></p>
 			</td>
 		</tr>
+
+		<tr><td colspan="2"><h3>Nâng hạng tài khoản</h3></td></tr>
+		<tr>
+			<th>Người gửi</th>
+			<td>noreply@myenglish.com.vn</td>
+		</tr>
+		<tr>
+			<th>Chủ đề</th>
+			<td>[MyEnglish] Nâng hạng tài khoản</td>
+		</tr>
+		<tr>
+			<th>Nội dung</th>
+			<td>
+				<p>Xin chào!</p>
+
+				<p>Cảm ơn bạn đã mua và thanh toán thành công gói cước của dịch vụ MyEnglish.</p>
+				<p>Sau đây là thông tin chi tiết gói cước của bạn:<p>
+				<ul>
+					<li>Tên gói: Basic</li>
+					<li>Thời gian hiệu lực: 07/05/2017 - 07/08/2017</li>
+				</ul>
+
+				<p>Truy cập <a href="www.myenglish.com.vn">www.myenglish.com.vn</a> để bắt đầu học.</p>
+				<p>Chúc bạn thành công!</p>
+				<hr>
+				<p><strong>MyEnglish</strong></p>
+			</td>
+		</tr>
 	</table>
 	</div>
 
