- Trang chủ: thêm phần testimonial - Bổ sung bước: xác nhận thanh toán - Mail: thay đổi nội dung mail nâng cấp tài khoản

--- a/index.html
+++ b/index.html
@@ -767,41 +767,76 @@
 	</div>
 	<!-- How it works - END -->
 
+	<!-- How it works - BEGIN -->
+	<div class="testimonial-section">
+		<div class="container">
+			<div class="media col-md-6 col-sm-6 col-xs-12">
+				<div class="media-left">
+					<img class="media-object" src="common/v1/img/vi-testimonial-img3.png" alt="Hoài Thu"></a>
+				</div>
+				<div class="media-body">
+					<h4 class="media-heading heading">Hoài Thu</h4>
+					<p>Trong một lần tìm kiếm trên mạng về công cụ tiếng Anh cho những người đi làm với quỹ thời gian eo hẹp, tôi đã tìm thấy EnglishCentral. Đây thực sự là một công cụ rất tốt để nâng cao kỹ năng nghe nói đối với những người như tôi. Từ khi sử dụng EnglishCentral, tiếng Anh của tôi đã được cải thiện rất nhiều, nhất là trong những lần giao tiếp làm việc với các đối tác nước ngoài, tôi đã tự tin hơn trong việc giao tiếp với họ và qua đó công việc có nhiều thuận lợi. Hy vọng EnglishCentral với các bạn cũng sẽ là một công cụ tốt để rèn luyện tiếng Anh, đặc biệt là nghe và nói, thiết yếu của tiếng Anh giao tiếp.</p>
+				</div>
+			</div>
+			<div class="media col-md-6 col-sm-6 col-xs-12">
+				<div class="media-left">
+					<img class="media-object" src="common/v1/img/vi-testimonial-img1.png" alt="Đoàn Thanh Vân"></a>
+				</div>
+				<div class="media-body">
+					<h4 class="media-heading heading">Đoàn Thanh Vân</h4>
+					<p>Tôi biết đến EnglishCentral qua sự giới thiệu của 1 người bạn. Cảm giác đầu tiên của tôi về Chương trình thú vị này là nó thật “awesome”. Tôi được chỉ ra lỗi phát âm sai, hướng dẫn phát âm lại cho chính xác, được học tiếng Anh với rất nhiều người nổi tiếng trên thế giới như Steve Jobs, Bill Gates, Obama… Tôi được trải nghiệm môi trường tiếng Anh thú vị khi được thử cảm giác so sánh kết quả học tập của mình với không chỉ các bạn học tại Việt Nam, mà còn trên toàn thế giới. Đặc biệt, với tôi, EnglishCentral là một công cụ thuận tiện vì việc học online giúp tôi có thể linh hoạt quản lý thời gian của mình. Cảm ơn EnglishCentral!</p>
+				</div>
+			</div>
+			<div class="media col-md-6 col-sm-6 col-xs-12">
+				<div class="media-left">
+					<img class="media-object" src="common/v1/img/vi-testimonial-img2.png" alt="Lưu Tuấn Vũ"></a>
+				</div>
+				<div class="media-body">
+					<h4 class="media-heading heading">Lưu Tuấn Vũ</h4>
+					<p>EnglishCentral là một điều may mắn và bất ngờ đến với quá trình học tiếng Anh của mình thông qua chia sẻ của 1 người anh, người thầy. Với những hướng dẫn về phát âm, công nghệ nhận diện giọng nói độc đáo, chỉ sau 4 tháng rèn luyện liên tục với EnglishCentral, mình đã có khả năng nói chuyện với những người bạn của mình ở Philippines, sau đó mình tiếp tục trau dồi và sau khoảng 6 tháng thì mình có thể giao tiếp một cách tương đối tự tin với những người bạn từ Mỹ. EnglishCentral là một công cụ tuyệt vời dành cho những người có ít thời gian đi học trung tâm, nhưng đòi hỏi sự kiên trì tự giác rất cao, chúc các bạn có những giờ học tiếng Anh thú vị với EnglishCentral.</p>
+				</div>
+			</div>
+			<div class="media col-md-6 col-sm-6 col-xs-12">
+				<div class="media-left">
+					<img class="media-object" src="common/v1/img/vi-testimonial-img4.png" alt="Hoàng Tuấn Anh"></a>
+				</div>
+				<div class="media-body">
+					<h4 class="media-heading heading">Hoàng Tuấn Anh</h4>
+					<p>Tôi tình cờ phát hiện EnglishCentral trên tường một người bạn năm 2009, đúng lúc đang trăn trở tìm một công cụ luyện âm tốt cho học trò của mình. Khi đó EC mới là bản beta, tuy nhiện tôi thực sự đã có một trải nghiệm thú vị và cảm nhận được rõ rệt tiến bộ đối với chính bản thân mình, một phiên dịch cabin chuyên nghiệp, sau 2-3 tuần trải nghiệm, khám phá tôi phát hiện ra mình không còn gặp vấn để khi vừa nhìn trình chiếu vừa đọc to một cách có hồn như trước đó nữa. EC không chỉ phong phú về nội dung mà còn có cơ chế chấm và tích điểm tức thì, tạo động lực ghê gớm cho người học tự vượt lên chính mình và có thể thi đấu với người khác nữa. Tôi quyết định giới thiệu và sử dụng EC như một công cụ chính thức cho hàng trăm học viên của mình. Rất nhiều trong số học viên của tôi đã làm chủ được tiếng Anh bằng tình yêu thực sự dành cho ngôn ngữ này từ đó. Qua thời gian dài tổng kết, chỉ có những ai có mục tiêu rõ ràng, có ham muốn và cam kết vượt qua bản thân từng ngày từng ngày một thì mới có thể thành công với EC. Thời gian để các bạn hoàn thiện mình phải mất từ 6 tháng đến 1 năm. Một lời khuyên với các bạn quan tâm tới EC: EnglishCentral là một công cụ tuyệt vời, nhưng nó sẽ chỉ là thứ vô dụng nếu bạn không sử dụng nó hàng ngày, EC chỉ có thể thúc đẩy quá trình hoàn thiện ngôn ngữ của bạn nhanh hơn, chứ không phải là phép mầu để bạn kỳ vọng sự lột xác trong vòng vài ngày hay vài tháng, vì thế hãy sẵn sàng và nghiêm khắc với bản thân trước khi đầu tư tiền để sở hữu công cụ tuyệt vời này.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- How it works - END -->
+
 	<footer class="row-fluid">
 		<div class="container">
-		<div class="clearfix">
-			<ul class="nav navbar-nav navbar-left">
-				<li><a href="index.html">Trang chủ</a></li>
-				<li><a href="news.html">Tin tức</a></li>
-				<li><a href="muagoicuoc-1.html">Gói cước</a></li>
-				<li><a href="faq.html">FAQ</a></li>
-				<li><a href="contact.html">Liên hệ</a></li>
-			</ul>
-			<ul class="nav navbar-nav navbar-right">
-				<li><p class="navbar-text">Bản quyền thuộc về Tổng công ty Truyền thông (VNPT-Media)</p></li>
-			</ul>
-		</div>
-		<div class="clearfix">
-			<div class="pull-left">
-					<div class="copyright-content">
+			<div class="media col-sm-6 col-xs-12">
+				<div class="clearfix">
+					<ul class="nav navbar-nav navbar-left">
+						<li><a href="index.html">Trang chủ</a></li>
+						<li><a href="news.html">Tin tức</a></li>
+						<li><a href="muagoicuoc-1.html">Gói cước</a></li>
+						<li><a href="faq.html">FAQ</a></li>
+						<li><a href="contact.html">Liên hệ</a></li>
+					</ul>
+				</div>
+				<div class="copyright-content">
 					<p><strong>Dịch vụ học Tiếng Anh trực tuyến MyEnglish</strong></p>
 					<p>Địa chỉ: 57A Huỳnh Thúc Kháng, Láng Hạ, Đống Đa, Hà Nội.</p>
 					<p>Hotline: 0888.91.56.96. Email: <a href="mailto:myenglish@vnpt.vn">myenglish@vnpt.vn</a></p>
 					<p>Dịch vụ cung cấp thử nghiệm.</p>
 				</div>
 			</div>
-
-			<div class="copyright pull-right">
-				<p>
-					<a href="http://vnptmedia.vn" target="_blank" title="Dịch vụ MyEnglish"><span class="logo logo-me"></span></a>
-					<a href="http://vnptmedia.vn" target="_blank" title="Dịch vụ MyHomework"><span class="logo logo-mh"></span></a>
-				</p>
-				<p>
-					<a href="http://vnedu.vn" target="_blank" title="Mạng giáo dục Việt Nam"><span class="logo logo-vnedu"></span></a>
-					<a href="http://vnptmedia.vn" target="_blank" title="Tổng công ty Truyền thông"><span class="logo logo-vnpt"></span></a>
-				</p>
+			<div class="media col-sm-6 col-xs-12">
+				<div class="copyright text-right-not-xs">
+					<p>Bản quyền thuộc về Tổng công ty Truyền thông (VNPT-Media)</p>
+					<p>
+						<a href="http://vnptmedia.vn" target="_blank" title="Dịch vụ MyEnglish"><span class="logo logo-vnptmedia"></span></a>
+					</p>
+				</div>
 			</div>
-		</div>
 		</div>
 	</footer>
 
