--- a/muagoicuoc-3.html
+++ b/muagoicuoc-3.html
@@ -68,16 +68,104 @@
 
 	<div class="container">
 	<div id="plans">
-		<div class="container">
-			<h1 class="heading">Thanh toán thành công</h1>
+		<div class="container col-sm-9">
+			<h1 class="heading">Thông tin đơn hàng</h1>
 
-			<div class="alert alert-success">
-				<strong>Bạn đã thanh toán thành công.</strong> Cảm ơn bạn đã lựa chọn đi cùng với MyEnglish, gói cước mới sẽ có hiệu lực ngay từ bây giờ.
-			</div>
+			<p>Vui lòng xác nhận thông tin thanh toán.</p>
 
-			<p>
-				<a href="index.html" class="btn btn-primary">Về trang chủ</a>
-			</p>
+			<form id="form-register-email" class="form-horizontal">
+
+				<div class="order-info">
+					<hr>
+
+					<div class="form-group">
+						<label class="col-sm-3 control-label">Mã hoá đơn</label>
+						<div class="col-sm-9">
+							<p class="form-control-static">#1236789</p>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-sm-3 control-label">Tên gói cước</label>
+						<div class="col-sm-9">
+							<p class="form-control-static">Basic</p>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-sm-3 control-label">Đơn giá</label>
+						<div class="col-sm-9">
+							<p class="form-control-static">100.000 đ</p>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-sm-3 control-label">Chu kỳ cước</label>
+						<div class="col-sm-9">
+							<p class="form-control-static">3 tháng</p>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-sm-3 control-label">Số tiền cần thanh toán</label>
+						<div class="col-sm-9">
+							<p class="form-control-static">300.000 đ</p>
+						</div>
+					</div>
+
+					<hr>
+				</div>
+
+				<!-- Tạm thời bỏ - BEGIN 
+				<div class="customer-info">
+					<div class="form-group">
+						<label for="lastname" class="col-sm-3 control-label">Tên đầy đủ</label>
+						<div class="col-sm-9 row">
+							<div class="col-sm-6">
+								<input type="text" class="form-control" id="lastname" placeholder="Họ, đệm" maxlength="255">
+							</div>
+							<div class="col-sm-6">
+								<input type="text" class="form-control" id="firstname" placeholder="Tên" 
+								maxlength="255">
+							</div>
+							<span class="help-block"></span>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label for="email" class="col-sm-3 control-label">Email</label>
+						<div class="col-sm-9">
+							<input type="text" class="form-control" id="email" placeholder="Email" maxlength="255">
+							<span class="help-block"></span>
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="mobile" class="col-sm-3 control-label">Số ĐTDĐ</label>
+						<div class="col-sm-9">
+							<input type="text" class="form-control" id="mobile" placeholder="Số điện thoại di động" maxlength="255">
+							<span class="help-block"></span>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label for="address" class="col-sm-3 control-label">Địa chỉ</label>
+						<div class="col-sm-9">
+							<input type="text" class="form-control" id="address" placeholder="Địa chỉ liên hệ" maxlength="500">
+							<span class="help-block"></span>
+						</div>
+					</div>
+
+					<hr>
+				</div>
+				<!-- Tạm thời bỏ - END -->
+
+				<div class="form-group">
+					<div class="col-sm-offset-2 col-sm-9">
+						<a href="muagoicuoc-4.html" class="btn btn-success">Xác nhận »</a>
+					</div>
+				</div>
+
+			</form>
 		</div>
 	</div>
 	<!-- How it works - END -->
