--- a/email.html
+++ b/email.html
@@ -78,7 +78,7 @@
 		</tr>
 		<tr>
 			<th>Chủ đề</th>
-			<td>[MyEnglish] Nâng hạng tài khoản</td>
+			<td>[MyEnglish] Nâng cấp / Gia hạn tài khoản</td>
 		</tr>
 		<tr>
 			<th>Nội dung</th>
@@ -86,10 +86,13 @@
 				<p>Xin chào!</p>
 
 				<p>Cảm ơn bạn đã mua và thanh toán thành công gói cước của dịch vụ MyEnglish.</p>
-				<p>Sau đây là thông tin chi tiết gói cước của bạn:<p>
+				<p>Sau đây là thông tin chi tiết giao dịch của bạn:<p>
 				<ul>
-					<li>Tên gói: Basic</li>
+					<li>Mã hoá đơn: #1236789</li>
+					<li>Hình thức giao dịch: Nâng cấp / Gia hạn</li>
+					<li>Tên gói cước: Basic</li>
 					<li>Thời gian hiệu lực: 07/05/2017 - 07/08/2017</li>
+					<li>Số tiền thanh toán: 300.000 đ</li>
 				</ul>
 
 				<p>Truy cập <a href="www.myenglish.com.vn">www.myenglish.com.vn</a> để bắt đầu học.</p>
